tests/semantic_analysis/error/callUnknownFunction.c
callUnknownFunction\.c:3:5: error:.*